--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
         "/Data/catkin-ws/devel/lib/python2.7/dist-packages",
         "/home/mark/ros_catkin_contrib_ws/devel/lib/python2.7/dist-packages",
         "/home/mark/ros_catkin_ws/install_isolated/lib/python2.7/dist-packages"
-    ]
+    ],
+    "files.associations": {
+        "*.tcc": "cpp"
+    }
 }
